# h2pcontrol_servers

./: DS1054Z_oscope_server.py  LICENSE  QC9528_delaygen_server.py  main.py  pyproject.toml
data_gui/: README.md  base_settings_panel.py  bottom_status_bar.py  control_panel.py  data_node.py  data_source.py  gui.py  main.py  main_window.py  main_window_backup.py  main_window_fixed.py  node_dialog.py  nodes.json  oscilloscope_channel.py  pyproject.toml  settings.py  styled_plot.py  styled_pw.py  test.py  test_cycle_detection.py  test_final.py  test_integration.py  top_menu_bar.py
data_gui/archive/: data_processor.py  plot_settings_panel.py
data_gui/catchments/: data_source.py  test_source_node.py
data_gui/discharges/: plot_node.py  styled_plot.py
data_gui/operators/: data_node.py  moving_average_expw.py  moving_average_strict.py  test_operator.py
data_gui/settings_panels/: base_settings_panel.py  node_manager_panel.py  plot_manager_panel.py  run_stop_panel.py
delta_elektronica/: h2pcontrol.server.toml  pyproject.toml
delta_elektronica/proto/: delta_elektronica.proto
delta_elektronica/src/delta_elektronica/: SCPIClient.py  main.py  voltage_gui.py
lioptec/: .gitignore  h2pcontrol.server.toml  main.py  pyproject.toml  testing.ipynb
lioptec/.github/workflows/: build-protos.yaml
lioptec/proto/: lioptec.proto
lioptec/proto_packages/lioptec/: pyproject.toml
lioptec/proto_packages/lioptec-server/: pyproject.toml
lioptec/proto_packages/lioptec/lioptec/lioptec/: __init__.py
lioptec/proto_packages/lioptec_server/: pyproject.toml
lioptec/proto_packages/lioptec_server/lioptec_server/lioptec/: __init__.py
lioptec/src/lioptec/: main.py
picoscope_5444DMSO/: 5444DMSO_oscope_server.py  h2pcontrol.server.toml  pyproject.toml
picoscope_5444DMSO/.h2pcontrol_build_temp/: pyproject.toml
picoscope_5444DMSO/.h2pcontrol_build_temp/src/5444DMSO/picoscope_5444DMSO/: __init__.py
picoscope_5444DMSO/.h2pcontrol_build_temp/src/ps5444DMSO/picoscope_5444DMSO/: __init__.py
picoscope_5444DMSO/proto/: picoscope_5444DMSO.proto
picoscope_5444DMSO/src/: picoscope.py  test_h2pcontrol.py
picoscope_5444DMSO/src/picoscope_5444DMSO/: main.py  picoscope_utils.py
server_tests/: test_delta300.py
