[project]
name = "h2pcontrol-servers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "delta300>=1.0",
    "h2pcontrol>=1.19",
]

[[tool.uv.index]]
name = "laserlab"
url = "http://laserlab-mini-s.betta-halibut.ts.net:8080"
