[project]
name = "data-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyopengl>=3.1.9",
    "pyopengl-accelerate>=3.1.9",
    "pyqtgraph>=0.13.7",
    "pyside6>=6.9.0",
    "qasync>=0.27.1",
    "qdarkstyle>=3.2.3",
    "qt-material>=2.17",
    "qtconsole>=5.6.1",
    "reactivex>=4.0.4",
    "si-prefix>=1.3.3",
    "tol-colors>=2.0.0.post1",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "laserlab"
url = "http://laserlab-mini-s.betta-halibut.ts.net:8080"
