[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delta_elektronica"
version = "1.2"
description = "Project initialized by h2pcontrol cli"
authors = [{ name = "Tijn Schuitevoerder", email = "tijn.schuitevoerder@student.uva.nl" }]
requires-python = ">=3.10, <4.0"
dependencies = [
  "betterproto2==0.4.0",
  "betterproto2-compiler==0.4.0",
  "delta300>=1.2",
  "grpcio>=1.72.1",
  "grpclib>=0.4.8",
  "h2pcontrol>=1.19",
  "pyserial>=3.5",
]

[[tool.uv.index]]
name = "laserlab"
url = "http://laserlab-mini-s.betta-halibut.ts.net:8080"



