[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "picoscope_5444DMSO"
version = "1.0"
description = "Project initialized by h2pcontrol cli"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11, <4.0"
dependencies = [
  "betterproto2==0.4.0",
  "betterproto2-compiler==0.4.0",
  "grpcio>=1.71.0",
  "grpclib>=0.4.8",
  "numpy>=2.2.6",
  "picosdk>=1.1",
  "ps5444dmso",
  "si-prefix>=1.3.3",
]

[tool.uv.sources]
ps5444dmso = { path = "../../../../../tmp/h2pcontrol-temp/dist/ps5444dmso-1.0-py3-none-any.whl" }

