[build-system]
  build-backend = "setuptools.build_meta"
  requires = ["setuptools", "wheel"]

[project]
  dependencies = ["betterproto2==0.4.0", "betterproto2-compiler==0.4.0", "grpcio>=1.71.0", "grpclib>=0.4.8", "numpy>=2.2.6", "picosdk>=1.1", "ps5444dmso", "si-prefix>=1.3.3"]
  description = "Project initialized by h2pcontrol cli"
  name = "ps5444DMSO"
  requires-python = ">=3.11, <4.0"
  version = "1.0"

  [[project.authors]]
    email = "you@example.com"
    name = "Your Name"

[tool]
  [tool.uv]
    [tool.uv.sources]
      [tool.uv.sources.ps5444dmso]
        path = ".h2pcontrol_build_temp/dist/ps5444dmso-1.0-py3-none-any.whl"
